Добавлен поиск. Меню вынесено в отдельный компонент. Добавлены аннотации к книгам. Добавлена проверка при загрузке и добавлении книг.

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,6 +4,8 @@
         <meta charset="UTF-8">
         <title>{% block title %}Электронная библиотека{% endblock %}</title>
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}?v=2" />
+        <link rel="stylesheet" href="{{ asset('css/font-awesome.css') }}">
+        <link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}">
         {% block stylesheets %} <link rel="stylesheet" href="{{ asset('css/style.css') }}"> {% endblock %}
     </head>
     <body>
