--- a/templates/book/add.html.twig
+++ b/templates/book/add.html.twig
@@ -32,6 +32,12 @@
                         <span class="highlight"></span><span class="bar"></span>
                     </div>
 
+                    <div class="group">
+                        <label for="name"> Описание к документу: </label>
+                        <br><br>
+                        <input type="text" name="description" placeholder="Введите аннотацию к книге"/>
+                        <span class="highlight"></span><span class="bar"></span>
+                    </div>
 
                     <div class="group">
                         <label>Автор: </label>
