--- a/public/css/style.css
+++ b/public/css/style.css
@@ -56,6 +56,10 @@ header {
     margin-bottom: 20px;
 }
 
+.search-btn {
+    background:#B04E5EFF;
+    color: #fff;
+}
 
 * {
     box-sizing: border-box;
