--- a/templates/book/edit.html.twig
+++ b/templates/book/edit.html.twig
@@ -27,6 +27,12 @@
                 </div>
 
                 <div class="group">
+                    <label for="name"> Описание к документу: </label>
+                    <br><br>
+                    <input type="text" name="description" value="{{ book.description }}"/>
+                </div>
+
+                <div class="group">
                     <label for="name">Место расположения: {{ book.url }}</label>
                     <br><br>
                     <input type="file" name="URL" />
