--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -1,3 +1,4 @@
+{% set user = app.session.get('user') %}
 <div id="centered">
     <div class="navigation">
         <a href="/"> <div class="menu">Главная </div> </a>
