--- a/templates/menu/categories.html.twig
+++ b/templates/menu/categories.html.twig
@@ -1,4 +1,4 @@
-
+{% set user = app.session.get('user') %}
     {% if menu is not empty %}
         <h1>Книги:</h1>
         <div class="ul-menu">
@@ -19,4 +19,44 @@
                 {% endfor %}
             </ul>
         </div>
+        <div class="search">
+            <form action="{{ path('search') }}" method="GET">
+                <div class="input-group">
+                    <input type="text" name="q" class="form-control" placeholder="Поиск">
+                    <div class="input-group-append">
+                        <button class="btn search-btn" type="submit">
+                            <i class="fa fa-search"></i>
+                        </button>
+                    </div>
+                </div>
+            </form>
+        </div>
+        {% if user is defined and user is not null %}
+            <div class="admin-actions__action">
+                <a href="{{ path('book_favorites') }}" class="btn edit-btn">Избранные книги</a>
+            </div>
+            {% if user.id_role == 1 %}
+                <hr />
+                <div class="admin-actions">
+                    <div class="admin-actions__action">
+                        <a href="{{ path('add_get') }}" class="btn edit-btn">Добавление</a>
+                    </div>
+                    <div class="admin-actions__action">
+                        <a href="{{ path('admin_index') }}" class="btn edit-btn">Администрирование</a>
+                    </div>
+                </div>
+            {% endif %}
+        {% endif %}
+
     {% endif %}
+{% block javascripts %}
+    <script src="{{  asset('js/jquery-3.3.1.min.js') }}"></script>
+    <script src="{{  asset('js/jquery.accordion.js') }}"></script>
+    <script src="{{  asset('js/jquery.cookie.js') }}"></script>
+    <script>
+        $(document).ready(function(){
+            $(".category").dcAccordion();
+        });
+    </script>
+
+{% endblock %}
