--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,6 +21,7 @@ body{
     height: 100%;
     font-size: 1.05em;
     font-family: 'Raleway', sans-serif;
+    background-color: #F2F2F2;
 }
 
 header {
@@ -355,7 +356,6 @@ label {
     color: #999;
     font-size: 18px;
     font-weight: normal;
-    position: absolute;
     pointer-events: none;
     left: 5px;
     top: 10px;
