Добавлена возможность загружать и читать документы в формате .djvu.

--- a/templates/book/add.html.twig
+++ b/templates/book/add.html.twig
@@ -58,7 +58,7 @@
                     <div class="group">
                         <label>Место расположения: </label>
                         <br><br>
-                        <input type="file" name="URL">
+                        <input type="file" name="URL" accept=".pdf, .djvu">
                         <span class="highlight"></span><span class="bar"></span>
                     </div>
 
